--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.3",
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
+    "js-xlsx": "^0.8.22",
+    "md5": "^2.3.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "sortablejs": "^1.13.0",
+    "spark-md5": "^3.0.1",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
