--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
     "js-xlsx": "^0.8.22",
+    "lite-virtual-list": "^0.1.7",
     "md5": "^2.3.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qiniu-js": "^3.3.1",
     "sortablejs": "^1.13.0",
     "spark-md5": "^3.0.1",
     "vue": "2.6.10",
